# SPOJ

./: .autocp  .gitignore  ABCDEF.cpp  ACM_ACronymMaker.cpp  Adding_Reversed_Numbers.cpp  Alphacode.cpp  Atoms_in_the_Lab.cpp  Ball_sum.cpp  Bernoulli_numbers.cpp  Book_Gift.cpp  Brackets.cpp  Buying_Apples.cpp  CMakeLists.txt  Can_you_play_carrom.cpp  Character_Patterns_Act_1.cpp  Character_Patterns_Act_2.cpp  Character_Patterns_Act_3.cpp  Character_Patterns_Act_5.cpp  Character_Patterns_Act_7.cpp  Character_Patterns_Act_8.cpp  Christmas_Play.cpp  Collatz_Polynomial.cpp  Complete_the_Sequence.cpp  Denver_and_Emma.cpp  Digits_of_SQRT_2.cpp  Direct_Visibility.cpp  Distinct_Primes.cpp  Equipment_Box.cpp  Evaluate_simple_RPN_expression.cpp  Factorial.cpp  Fast_Multiplication.cpp  GCD_Product_Sum.cpp  GO_GOA_GONE.cpp  Hidden_Couple.cpp  Julka.cpp  Kamil.cpp  LCM_Game.cpp  Land_Acquisition.cpp  Minimum_Bounding_Rectangle.cpp  Modular_Tetration.cpp  (+15 more)
.cph/: .Adding_Reversed_Numbers.cpp_78bcaad7c84b81077385e4953f64df02.prob  .Ball_sum.cpp_96fedce17d5249a422f3223fdc40852c.prob  .Book_Gift.cpp_88cb095c614c3353a3e6f8496b4be00d.prob  .Character_Patterns_Act_1.cpp_9e7233622ac963536a4e42fedb92b2b4.prob  .Character_Patterns_Act_2.cpp_d09dd67da664c855134e87f0891cd80a.prob  .Character_Patterns_Act_3.cpp_96b50c2c546b55692fa282a9b8d7185b.prob  .Character_Patterns_Act_4.cpp_8915d7c05cd9a29154a76611043ab8ab.prob  .Character_Patterns_Act_5.cpp_d50f131ec9d76f3e38e6e1d80d88c88f.prob  .Character_Patterns_Act_6.cpp_fc3167617796377525c17260174c029d.prob  .Character_Patterns_Act_7.cpp_73ea68a8d8cf90979b749ce3fb3bdb8e.prob  .Character_Patterns_Act_8.cpp_b40fd0667cbe4137b1db50246821938a.prob  .Denver_and_Emma.cpp_28c4f4e123ad22a6c70e10c9adda0143.prob  .Equipment_Box.cpp_1ada98fb2e657355da73ac44e3788db2.prob  .Factorial.cpp_bc01a9fb12156274e41e50d3054ecdb2.prob  .GCD_Product_Sum.cpp_5b92f9a171fd55d901a811161fa11b59.prob  .Hidden_Couple.cpp_ced56af15faea2893fa72028c62768f3.prob  .Julka.cpp_f64164d7515867bc858ae97c05e0ecdf.prob  .Kamil.cpp_b7b1ecba2f45b9628f7d3cf37acad935.prob  .LCM_Game.cpp_0a3b253bd510ea699bec02ee5735ecf0.prob  .Minimum_Bounding_Rectangle.cpp_3ce01f30ecc2c1b02349a070c41a61ec.prob  .Modular_Tetration.cpp_45f1695e13d3059740cf9219aa6072ae.prob  (+4 more)
(+27 files in other folders)
