cmake_minimum_required(VERSION 3.31)
project(Sphere_Online_Judge)

set(CMAKE_CXX_STANDARD 20)

add_executable(Sphere_Online_Judge main.cpp)

add_executable(Tricky_Means "SPOJ - Basics/Tricky_Means.cpp")
add_executable(Prime_or_not_Prime "SPOJ - Basics/Prime_or_not_Prime.cpp")
add_executable(Two_Circles "SPOJ - Basics/Two_Circles.cpp")
add_executable(Substitution_cipher "SPOJ - Basics/Substitution_cipher.cpp")
add_executable(Divisibility "SPOJ - Basics/Divisibility.cpp")
add_executable(Fun_with_Sequences "SPOJ - Basics/Fun_with_Sequences.cpp")
add_executable(Fun_with_Sequences_Act_2 "SPOJ - Basics/Fun_with_Sequences_Act_2.cpp")
add_executable(Fun_with_Sequences_Act_3 "SPOJ - Basics/Fun_with_Sequences_Act_3.cpp")
add_executable(Fun_with_Sequences_Act_4 "SPOJ - Basics/Fun_with_Sequences_Act_4.cpp")
add_executable(Fun_with_Sequences_Act_5 "SPOJ - Basics/Fun_with_Sequences_Act_5.cpp")
add_executable(Fun_with_Sequences_Act_6 "SPOJ - Basics/Fun_with_Sequences_Act_6.cpp")
add_executable(Fun_with_Sequences_Act_7 "SPOJ - Basics/Fun_with_Sequences_Act_7.cpp")
add_executable(Iterated_sums "SPOJ - Basics/Iterated_sums.cpp")
add_executable(Wow "SPOJ - Basics/Wow.cpp")
add_executable(Straight_Line_Spiral_Pattern_Act_1 "SPOJ - Basics/Straight_Line_Spiral_Pattern_Act_1.cpp")
add_executable(Straight_Line_Spiral_Pattern_Act_2 "SPOJ - Basics/Straight_Line_Spiral_Pattern_Act_2.cpp")
add_executable(Straight_Line_Spiral_Pattern_Act_3 "SPOJ - Basics/Straight_Line_Spiral_Pattern_Act_3.cpp")
add_executable(Half_of_the_half "SPOJ - Basics/Half_of_the_half.cpp")
add_executable(Sums_to_calculate "SPOJ - Basics/Sums_to_calculate.cpp")
add_executable(Test_1_ "SPOJ - Basics/Test_1_.cpp")
add_executable(Trial_Division "SPOJ - Basics/Trial_Division.cpp")
add_executable(Life_the_Universe_and_Everything_Interactive "SPOJ - Basics/Life_the_Universe_and_Everything_Interactive.cpp")
add_executable(Ada_and_Carrot "SPOJ - Classical/Ada_and_Carrot.cpp")
add_executable(Nobabs_Treasure_Hunt "SPOJ - Tutorial/Nobabs_Treasure_Hunt.cpp")
add_executable(Small_factorials "SPOJ - Classical/Small_factorials.cpp")
add_executable(Painting_Hat "SPOJ - Classical/Painting_Hat.cpp")